Update link to musescore api

--- a/example.ipynb
+++ b/example.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "# Musescore Metadata/Score Retrieval\n",
     "\n",
-    "The first part of any pipeline is to retrieve a dataset. For this we will use the [musescore api](developers.musescore.com) for both the metadata retrieval and the score download."
+    "The first part of any pipeline is to retrieve a dataset. For this we will use the [musescore api](http://developers.musescore.com/) for both the metadata retrieval and the score download."
    ]
   },
   {
