--- a/example.ipynb
+++ b/example.ipynb
@@ -22,8 +22,10 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "import pandas as pd\n",
     "\n",
-    "from utils.dataprep.metadata import *"
+    "from utils.dataprep.metadata import *\n",
+    "from utils.dataprep.scores import *"
    ]
   },
   {
@@ -48,6 +50,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Cleaing of the dataset before retrieval\n",
+    "def metadata_sanetization(df, min_measures=10, max_measures=100):\n",
+    "    df = df[pd.to_numeric(df.id, errors='coerce').notnull()]\n",
+    "    df['metadata_measures'] = pd.to_numeric(df['metadata_measures'], errors='coerce')\n",
+    "    df = df[(df.metadata_measures >= min_measures) & (df.metadata_measures <= max_measures)]\n",
+    "    return df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,7 +82,9 @@
    "outputs": [],
    "source": [
     "prefix = 'ms_parts_1' \n",
-    "meta_file = get_metadata(DATA_DIR, prefix, parts=1, retrieve_max=100) "
+    "meta_file = get_metadata(DATA_DIR, prefix, parts=1, retrieve_max=100)\n",
+    "df = metadata_sanetization(pd.read_csv(meta_file))  \n",
+    "df_paths = get_scores(df, DATA_DIR, prefix)"
    ]
   },
   {
@@ -80,13 +100,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "prefix = 'ms_parts_2' \n",
-    "meta_file = get_metadata(DATA_RAW, prefix, parts=2, retrieve_max=100) "
+    "meta_file = get_metadata(DATA_DIR, prefix, parts=2, retrieve_max=100) \n",
+    "df = metadata_sanetization(pd.read_csv(meta_file))  \n",
+    "df_paths = get_scores(df, DATA_DIR, prefix)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
