Add training example to notebook

--- a/example.ipynb
+++ b/example.ipynb
@@ -25,7 +25,12 @@
     "import pandas as pd\n",
     "\n",
     "from utils.dataprep.metadata import *\n",
-    "from utils.dataprep.scores import *"
+    "from utils.dataprep.scores import *\n",
+    "from utils.data import DataManager\n",
+    "from utils.features import *\n",
+    "from utils.statematrix import *\n",
+    "from utils.model import *\n",
+    "from utils.training import *"
    ]
   },
   {
@@ -100,7 +105,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -111,21 +117,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will first create a \"data manager\", this object will be used as a wrapper around the two builder needed by the model. The feature builder is in charge of going from input space to feature space. The statematrix builder is in charge of going from the \"score\" space (the raw data in xml/kern/etc.) to input space and vice versa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "datamanager = DataManager(FeatureBuilderSimple(), StateMatrixBuilderSimple())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "model = Model(datamanager, [300,300],[100,50], dropout=0.5)\n",
+    "model.setup()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you have already trained weights run the following cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Use this if loading GPU params to CPU model.\n",
+    "# import thenao\n",
+    "# thenao.config.experimental.unpickle_gpu_on_cpu = True\n",
+    "\n",
+    "config = pickle.load(open(\"output/weights/final_learned_config.p\", \"rb\" ))\n",
+    "model.learned_config = config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Load the pieces in statematrix format\n",
+    "pieces = pickle.load(open(\"data/music_statematrix.pkl\", \"rb\" ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The training is quiet slow. It takes ~10 secondes on a GTX 650 per iteration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Training\")\n",
+    "train_piece(None, pieces, 2000, 'output/')\n",
+    "\n",
+    "print(\"Dumping\")\n",
+    "pickle.dump(model.learned_config, open( \"output/weights/final_learned_config.p\", \"wb\" ) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generating"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "seed_file = 'data/raw/ms_parts_1/ms_score_3044026.mxl'\n",
+    "seed_stream = m21.converter.parse(seed_file)\n",
+    "seed_state = model.data_manager.s.stream_to_statematrix(seed_stream)\n",
+    "seed_input = model.data_manager.f.note_state_matrix_to_input_form(seed_state)\n",
+    "\n",
+    "length = 64 if len(seed_input) > 64 else len(seed_input)\n",
+    "\n",
+    "generated_state = np.concatenate((seed_input[:length], model.generate_fun(128, 1, seed_input[:length])), axis=0)\n",
+    "generated_steam = model.data_manager.s.statematrix_to_stream(generated_state)\n",
+    "generated_steam.show()"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:biaxial]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-biaxial-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
