Correct example generation

--- a/example.ipynb
+++ b/example.ipynb
@@ -174,7 +174,7 @@
     "# import thenao\n",
     "# thenao.config.experimental.unpickle_gpu_on_cpu = True\n",
     "\n",
-    "config = pickle.load(open(\"output/weights/final_learned_config.p\", \"rb\" ))\n",
+    "config = pickle.load(open(\"output/weights/params_final.p\", \"rb\" ))\n",
     "model.learned_config = config"
    ]
   },
@@ -223,21 +223,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "seed_file = 'data/raw/ms_parts_1/ms_score_3044026.mxl'\n",
+    "seed_file = 'data/ms_parts_1/ms_score_3047311.mxl'\n",
     "seed_stream = m21.converter.parse(seed_file)\n",
     "seed_state = model.data_manager.s.stream_to_statematrix(seed_stream)\n",
     "seed_input = model.data_manager.f.note_state_matrix_to_input_form(seed_state)\n",
     "\n",
     "length = 64 if len(seed_input) > 64 else len(seed_input)\n",
     "\n",
-    "generated_state = np.concatenate((seed_input[:length], model.generate_fun(128, 1, seed_input[:length])), axis=0)\n",
+    "generated_state = np.concatenate((seed_state[:length], model.generate_fun(128, 1, seed_input[:length])), axis=0)\n",
     "generated_steam = model.data_manager.s.statematrix_to_stream(generated_state)\n",
     "generated_steam.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
