Add data preparation to example notebook

--- a/example.ipynb
+++ b/example.ipynb
@@ -120,14 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will first create a \"data manager\", this object will be used as a wrapper around the two builder needed by the model. The feature builder is in charge of going from input space to feature space. The statematrix builder is in charge of going from the \"score\" space (the raw data in xml/kern/etc.) to input space and vice versa."
+    "# Dataset selection"
    ]
   },
   {
@@ -139,6 +132,56 @@
    "outputs": [],
    "source": [
     "datamanager = DataManager(FeatureBuilderSimple(), StateMatrixBuilderSimple())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def listdir_fullpath(d):\n",
+    "    return [os.path.join(d, f) for f in os.listdir(d)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "directory = 'data/piano-midi'\n",
+    "score_paths = listdir_fullpath(directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pieces = datamanager.pieces_to_statematrix(score_paths)\n",
+    "pickle.dump(pieces, open('data/music_statematrix.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will first create a \"data manager\", this object will be used as a wrapper around the two builder needed by the model. The feature builder is in charge of going from input space to feature space. The statematrix builder is in charge of going from the \"score\" space (the raw data in xml/kern/etc.) to input space and vice versa."
    ]
   },
   {
