--- a/example.ipynb
+++ b/example.ipynb
@@ -131,7 +131,7 @@
    },
    "outputs": [],
    "source": [
-    "datamanager = DataManager(FeatureBuilderSimple(), StateMatrixBuilderSimple())"
+    "datamanager = DataManager(FeatureBuilderArticulations(), StateMatrixBuilderArticulations())"
    ]
   },
   {
@@ -230,7 +230,7 @@
    "outputs": [],
    "source": [
     "# Load the pieces in statematrix format\n",
-    "pieces = pickle.load(open(\"data/music_statematrix.pkl\", \"rb\" ))"
+    "pieces = pickle.load(open(\"data/piano-midi_statematrix.pkl\", \"rb\" ))"
    ]
   },
   {
@@ -244,12 +244,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "print(\"Training\")\n",
-    "train_piece(None, pieces, 2000, 'output/')\n",
+    "train_piece(model, pieces, 10, 'output/')\n",
     "\n",
     "print(\"Dumping\")\n",
     "pickle.dump(model.learned_config, open( \"output/weights/final_learned_config.p\", \"wb\" ) )"
