Correct example notebook train cell

--- a/example.ipynb
+++ b/example.ipynb
@@ -249,7 +249,7 @@
    "outputs": [],
    "source": [
     "print(\"Training\")\n",
-    "train_piece(None, pieces, 2000, 'output/')\n",
+    "train_piece(model, pieces, 2000, 'output/')\n",
     "\n",
     "print(\"Dumping\")\n",
     "pickle.dump(model.learned_config, open( \"output/weights/final_learned_config.p\", \"wb\" ) )"
