Add musescore parsing to notebook

--- a/example.ipynb
+++ b/example.ipynb
@@ -154,8 +154,7 @@
    },
    "outputs": [],
    "source": [
-    "directory = 'data/piano-midi'\n",
-    "score_paths = listdir_fullpath(directory)"
+    "score_paths = listdir_fullpath('data/ms_parts_1') + listdir_fullpath('data/ms_parts_2')"
    ]
   },
   {
