Modify model for articulations with softmax

--- a/example.ipynb
+++ b/example.ipynb
@@ -23,6 +23,7 @@
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
+    "import os\n",
     "\n",
     "from utils.dataprep.metadata import *\n",
     "from utils.dataprep.scores import *\n",
@@ -131,7 +132,7 @@
    },
    "outputs": [],
    "source": [
-    "datamanager = DataManager(FeatureBuilderArticulations(), StateMatrixBuilderArticulations())"
+    "datamanager = DataManager(FeatureBuilderSimple(), StateMatrixBuilderSimple())"
    ]
   },
   {
@@ -150,7 +151,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -161,12 +162,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pieces = datamanager.pieces_to_statematrix(score_paths)\n",
-    "pickle.dump(pieces, open('data/music_statematrix.pkl', 'wb'))"
+    "pieces = datamanager.pieces_to_statematrix(score_paths, count = 10)\n",
+    "pickle.dump(pieces, open('data/music_statematrix_arti_soft.pkl', 'wb'))"
    ]
   },
   {
@@ -194,6 +195,17 @@
    "source": [
     "model = Model(datamanager, [300,300],[100,50], dropout=0.5)\n",
     "model.setup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model.setup_generate()"
    ]
   },
   {
@@ -229,7 +241,7 @@
    "outputs": [],
    "source": [
     "# Load the pieces in statematrix format\n",
-    "pieces = pickle.load(open(\"data/music_statematrix.pkl\", \"rb\" ))"
+    "pieces = pickle.load(open(\"data/piano-midi_statematrix.pkl\", \"rb\" ))"
    ]
   },
   {
