--- a/example.ipynb
+++ b/example.ipynb
@@ -23,6 +23,7 @@
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
+    "import os\n",
     "\n",
     "from utils.dataprep.metadata import *\n",
     "from utils.dataprep.scores import *\n",
@@ -42,7 +43,8 @@
    "outputs": [],
    "source": [
     "DIR = Path('')\n",
-    "DATA_DIR = DIR/'data/'"
+    "DATA_DIR = DIR/'data/'\n",
+    "MAX_RETRIEVE = 100 # change to None for no restriction"
    ]
   },
   {
@@ -94,30 +96,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "### Part 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "prefix = 'ms_parts_2' \n",
-    "meta_file = get_metadata(DATA_DIR, prefix, parts=2, retrieve_max=100) \n",
-    "df = metadata_sanetization(pd.read_csv(meta_file))  \n",
-    "df_paths = get_scores(df, DATA_DIR, prefix)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Dataset selection"
@@ -150,23 +128,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "score_paths = listdir_fullpath('data/ms_parts_1') + listdir_fullpath('data/ms_parts_2')"
+    "score_paths = listdir_fullpath('data/ms_parts_1')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "pieces = datamanager.pieces_to_statematrix(score_paths)\n",
-    "pickle.dump(pieces, open('data/music_statematrix.pkl', 'wb'))"
+    "pickle.dump(pieces, open('data/ms_statematrix.pkl', 'wb'))"
    ]
   },
   {
@@ -216,7 +194,7 @@
     "# import thenao\n",
     "# thenao.config.experimental.unpickle_gpu_on_cpu = True\n",
     "\n",
-    "config = pickle.load(open(\"output/weights/params_final.p\", \"rb\" ))\n",
+    "config = pickle.load(open(\"output/weights/params29000.p\", \"rb\" ))\n",
     "model.learned_config = config"
    ]
   },
@@ -229,7 +207,7 @@
    "outputs": [],
    "source": [
     "# Load the pieces in statematrix format\n",
-    "pieces = pickle.load(open(\"data/music_statematrix.pkl\", \"rb\" ))"
+    "pieces = pickle.load(open(\"data/ms_statematrix.pkl\", \"rb\" ))"
    ]
   },
   {
@@ -270,7 +248,7 @@
    },
    "outputs": [],
    "source": [
-    "seed_file = 'data/ms_parts_1/ms_score_3047311.mxl'\n",
+    "seed_file = 'data/score_example.mxl'\n",
     "seed_stream = m21.converter.parse(seed_file)\n",
     "seed_state = model.data_manager.s.stream_to_statematrix(seed_stream)\n",
     "seed_input = model.data_manager.f.note_state_matrix_to_input_form(seed_state)\n",
