--- a/example.ipynb
+++ b/example.ipynb
@@ -23,6 +23,7 @@
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
+    "import os\n",
     "\n",
     "from utils.dataprep.metadata import *\n",
     "from utils.dataprep.scores import *\n",
@@ -42,7 +43,8 @@
    "outputs": [],
    "source": [
     "DIR = Path('')\n",
-    "DATA_DIR = DIR/'data/'"
+    "DATA_DIR = DIR/'data/'\n",
+    "RETRIEVE_MAX = 100 # Change to None for no limit"
    ]
   },
   {
@@ -63,7 +65,7 @@
    "outputs": [],
    "source": [
     "# Cleaing of the dataset before retrieval\n",
-    "def metadata_sanetization(df, min_measures=10, max_measures=100):\n",
+    "def metadata_sanetization(df, min_measures=10, max_measures=RETRIEVE_MAX):\n",
     "    df = df[pd.to_numeric(df.id, errors='coerce').notnull()]\n",
     "    df['metadata_measures'] = pd.to_numeric(df['metadata_measures'], errors='coerce')\n",
     "    df = df[(df.metadata_measures >= min_measures) & (df.metadata_measures <= max_measures)]\n",
@@ -88,30 +90,6 @@
    "source": [
     "prefix = 'ms_parts_1' \n",
     "meta_file = get_metadata(DATA_DIR, prefix, parts=1, retrieve_max=100)\n",
-    "df = metadata_sanetization(pd.read_csv(meta_file))  \n",
-    "df_paths = get_scores(df, DATA_DIR, prefix)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "### Part 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "prefix = 'ms_parts_2' \n",
-    "meta_file = get_metadata(DATA_DIR, prefix, parts=2, retrieve_max=100) \n",
     "df = metadata_sanetization(pd.read_csv(meta_file))  \n",
     "df_paths = get_scores(df, DATA_DIR, prefix)"
    ]
@@ -150,23 +128,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "score_paths = listdir_fullpath('data/ms_parts_1') + listdir_fullpath('data/ms_parts_2')"
+    "score_paths = listdir_fullpath('data/ms_parts_1')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "pieces = datamanager.pieces_to_statematrix(score_paths)\n",
-    "pickle.dump(pieces, open('data/music_statematrix.pkl', 'wb'))"
+    "pickle.dump(pieces, open('data/ms_parts_1_statematrix.pkl', 'wb'))"
    ]
   },
   {
@@ -216,7 +194,7 @@
     "# import thenao\n",
     "# thenao.config.experimental.unpickle_gpu_on_cpu = True\n",
     "\n",
-    "config = pickle.load(open(\"output/weights/params_final.p\", \"rb\" ))\n",
+    "config = pickle.load(open(\"output/weights/1.p\", \"rb\" ))\n",
     "model.learned_config = config"
    ]
   },
@@ -229,7 +207,7 @@
    "outputs": [],
    "source": [
     "# Load the pieces in statematrix format\n",
-    "pieces = pickle.load(open(\"data/music_statematrix.pkl\", \"rb\" ))"
+    "pieces = pickle.load(open(\"data/ms_parts_1_statematrix.pkl\", \"rb\" ))"
    ]
   },
   {
@@ -251,7 +229,7 @@
     "train_piece(model, pieces, 2000, 'output/')\n",
     "\n",
     "print(\"Dumping\")\n",
-    "pickle.dump(model.learned_config, open( \"output/weights/final_learned_config.p\", \"wb\" ) )"
+    "pickle.dump(model.learned_config, open( \"output/weights/params_final.p\", \"wb\" ) )"
    ]
   },
   {
@@ -269,7 +247,7 @@
    },
    "outputs": [],
    "source": [
-    "seed_file = 'data/ms_parts_1/ms_score_3047311.mxl'\n",
+    "seed_file = 'data/example_score.mxl'\n",
     "seed_stream = m21.converter.parse(seed_file)\n",
     "seed_state = model.data_manager.s.stream_to_statematrix(seed_stream)\n",
     "seed_input = model.data_manager.f.note_state_matrix_to_input_form(seed_state)\n",
