--- a/example.ipynb
+++ b/example.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "# Musescore Metadata/Score Retrieval\n",
     "\n",
-    "The first part of any pipeline is to retrieve a dataset. For this we will use the [musescore api](http://developers.musescore.com/) for both the metadata retrieval and the score download."
+    "The first part of any pipeline is to retrieve a dataset. For this we will use the [musescore api](http://developers.musescore.com/) for both the metadata retrieval and the score download. We will omit the score analysis part."
    ]
   },
   {
@@ -194,7 +194,7 @@
     "# import thenao\n",
     "# thenao.config.experimental.unpickle_gpu_on_cpu = True\n",
     "\n",
-    "config = pickle.load(open(\"output/weights/1.p\", \"rb\" ))\n",
+    "config = pickle.load(open(\"output/weights/params29000.p\", \"rb\" ))\n",
     "model.learned_config = config"
    ]
   },
@@ -207,7 +207,7 @@
    "outputs": [],
    "source": [
     "# Load the pieces in statematrix format\n",
-    "pieces = pickle.load(open(\"data/ms_parts_1_statematrix.pkl\", \"rb\" ))"
+    "pieces = pickle.load(open(\"data/example_statematrix.pkl\", \"rb\" ))"
    ]
   },
   {
@@ -221,12 +221,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "print(\"Training\")\n",
-    "train_piece(model, pieces, 2000, 'output/')\n",
+    "train_piece(model, pieces, 10000, 'output/')\n",
     "\n",
     "print(\"Dumping\")\n",
     "pickle.dump(model.learned_config, open( \"output/weights/params_final.p\", \"wb\" ) )"
@@ -237,6 +238,13 @@
    "metadata": {},
    "source": [
     "# Generating"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first 4 measures are the one from the seed, then it is the generated music."
    ]
   },
   {
@@ -256,17 +264,15 @@
     "\n",
     "generated_state = np.concatenate((seed_state[:length], model.generate_fun(128, 1, seed_input[:length])), axis=0)\n",
     "generated_steam = model.data_manager.s.statematrix_to_stream(generated_state)\n",
-    "generated_steam.show()"
+    "generated_steam.show('midi')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------"
+   ]
   }
  ],
  "metadata": {
