Update example notebook

--- a/example.ipynb
+++ b/example.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "# Musescore Metadata/Score Retrieval\n",
     "\n",
-    "The first part of any pipeline is to retrieve a dataset. For this we will use the [musescore api](http://developers.musescore.com/) for both the metadata retrieval and the score download. We will omit the score analysis part."
+    "The first part of any pipeline is to retrieve a dataset. For this we will use the [musescore api](http://developers.musescore.com/) for both the metadata retrieval and the score download. We have omitted the score analysis part."
    ]
   },
   {
